--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                     <h1 class="display-5 mb-0">My Education</h1>
                 </div>
                 <div class="col-lg-6 text-lg-end">
-                    <a class="btn btn-primary py-3 px-5" href="https://erghimire.github.io//trainings.html" target="_blank">My Trainings</a>
+                    <a class="btn btn-primary py-3 px-5" href="https://erghimire.github.io/trainings.html" target="_blank">My Trainings</a>
                 </div>
             </div>
             <div class="row g-4">
