--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                     <div class="portfolio-img rounded overflow-hidden">
                         <img class="img-fluid" src="img/project-1.jpg" alt="">
                         <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="https://erghimire.github.io//minor-project.html" target="_blank"><i class="fa fa-eye"></i></a>
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="https://erghimire.github.io/iamroshanghimire/minor-project.html" target="_blank"><i class="fa fa-eye"></i></a>
                         </div>
                     </div>
                 </div>
@@ -420,7 +420,7 @@
                     <div class="portfolio-img rounded overflow-hidden">
                         <img class="img-fluid" src="img/project-2.jpg" alt="">
                         <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="https://erghimire.github.io//major-project.html" target="_blank"><i class="fa fa-eye"></i></a>
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="https://erghimire.github.io/iamroshanghimire/major-project.html" target="_blank"><i class="fa fa-eye"></i></a>
                         </div>
                     </div>
                 </div>
