--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+Fplay<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -80,7 +80,7 @@
                     <div class="d-flex align-items-center pt-5">
                         <a href="https://drive.usercontent.google.com/u/0/uc?id=1Ao1oc6RRz3nMxllUBX1tbrlFH-X1NjJE&export=download" class="btn btn-primary py-3 px-4 me-5">Download Resume</a>
                         <button type="button" class="btn-play" data-bs-toggle="modal"
-                            data-src="https://www.youtube.com/embed/W3evksgFMt0?si=mCIJJN9pF9BRkEJu&amp" data-bs-target="#videoModal">
+                            data-src="https://www.youtube.com/embed/W3evksgFMt0?si=mCIJJN9pF9BRkEJu&amp" autoplay; data-bs-target="#videoModal">
                             <span></span>
                         </button>
                         <h5 class="ms-4 mb-0 d-none d-sm-block">Play Video</h5>
