--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@ Fplay<!DOCTYPE html>
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom text-secondary" href="https://erghimire.github.io/">Roshan Ghimire</a>, All Right Reserved.
+                        &copy; <a class="border-bottom text-secondary" href="https://erghimire.github.io/iamroshanghimire/">Roshan Ghimire</a>, All Right Reserved.
                     </div>
                 </div>
             </div>
