--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             </a>
             <div class="navbar-nav me-auto py-0">
                 <a href="#project" class="nav-item nav-link">My Projects</a>
+                <a href="#album" class="nav-item nav-link">My Albums</a>
                 <a href="#contact" class="nav-item nav-link">Contact Me</a>
             </div>
         </div>
