--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
         </div>
     <!-- Projects End -->
     
-    <!-- My Photo Albums Start>
+    <!-- My Photo Albums Start -->
     <div class="container-xxl py-6 pt-5" id="album">
         <div class="container">
             <div class="row g-5 mb-5 align-items-center wow fadeInUp" data-wow-delay="0.1s">
@@ -465,7 +465,7 @@
             </div>
             </div>
         </div>
-    <!-- My Photo Album End>
+    <!-- My Photo Album End-->
     
     <!-- Contact Start -->
     <div class="container-xxl pb-5" id="contact">
